main pages built with basic styling

--- a/distance.css
+++ b/distance.css
@@ -4,7 +4,7 @@ html, body {
 
 body {
     background: rgb(247, 249, 250);
-    background: linear-gradient(330deg, rgba(247, 249, 250, 1) 0%, rgba(135, 202, 251, 1) 40%);
+    background: linear-gradient(330deg, rgba(247, 249, 250, 1) 0%, rgb(253, 57, 57) 40%);
 }
 
 .logo {
@@ -34,9 +34,8 @@ body {
 }
 
 .logo-images {
-    display: block;
     border-radius: 10px;
-    padding-top: 10%;
+    padding-top: 20vh;
 }
 
 .fade-in {
@@ -44,6 +43,7 @@ body {
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
+
 @keyframes fadeInAnimation {
     0% {
         opacity: 0;
@@ -51,16 +51,13 @@ body {
     100% {
         opacity: 1;
     }
-}
-
-#splash-content {
-    height: 80vh;
-    margin-top: 10vh;
+    
 }
 
 .content-box {
     background-color: rgba(255, 255, 255, 0.904);
     height: 30vh;
     margin-top: 10vh;
-    border-radius: 10px;
+    border: 2px solid darkgrey;
+  
 }
