--- a/movie.css
+++ b/movie.css
@@ -31,13 +31,15 @@ button {
 
 .logo {
     display: block;
-    position: fixed;
+    /* position: fixed; */
     width: 60%;
     margin: 0 auto;
     z-index: -1;
     height: 10vw;
     width: auto;
+    margin-top: -20px;
 }
+
 
 .fade-in {
     animation: fadeInAnimation ease 3s;
@@ -73,7 +75,7 @@ button {
 .flex {
     display: flex;
     justify-content: start;
-    width: 100vw
+    
 }
 
 .row-width {
