--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -41,10 +41,6 @@ a {
 
 .logo-images {
     display: block;
-    border-radius: 10px;
-    padding-top: 10%;
-
-    margin-bottom: 15px;
 }
 
 #splash-content {
@@ -153,51 +149,18 @@ a {
 }
 
 @keyframes grow {
-    10% {
+    0% {
         background-color: rgb(235, 140, 248);
-        height: 70px;
-        width: 70px;
+        height: 30px;
+        width: 30px; 
     }
-    20% {
-        background-color: rgb(205, 140, 248);
-        height: 100px;
-        width: 100px;
-    }
-    30% {
-        background-color: rgb(173, 140, 248);
-        height: 175px;
-        width: 175px;
-    }
-    40% {
-        background-color: rgb(182, 140, 248);
-        height: 275px;
-        width: 275px;
-    }
+  
     50% {
         background-color: rgb(235, 140, 248);
         height: 350px;
         width: 350px;
     }
-    60% {
-        background-color: rgb(200, 140, 248);
-        height: 275px;
-        width: 275px;
-    }
-    70% {
-        background-color: rgb(140, 147, 248);
-        height: 175px;
-        width: 175px;
-    }
-    80% {
-        background-color: rgb(151, 140, 248);
-        height: 100px;
-        width: 100px;
-    }
-    90% {
-        background-color: rgb(182, 140, 248);
-        height: 70px;
-        width: 70px;
-    }
+
     100% {
         background-color: rgb(230, 140, 248);
         height: 30px;
@@ -223,18 +186,18 @@ a {
 .scroll-up {
     position: absolute;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     margin: 0;
     line-height: 50px;
     text-align: center;
     /* Starting position */
-    -moz-transform: translateY(100%);
-    -webkit-transform: translateY(100%);
-    transform: translateY(100%);
+    -moz-transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
     /* Apply animation to this element */
-    -moz-animation: scroll-up 5s linear 1;
-    -webkit-animation: scroll-up 5s linear 1;
-    animation: scroll-up 5s linear 1;
+    -moz-animation: scroll-up 4s linear;
+    -webkit-animation: scroll-up 4s linear;
+    animation: scroll-up 4s linear;
     /* animation-delay: 1s */
 }
 
@@ -242,54 +205,54 @@ a {
 
 @-moz-keyframes scroll-up {
     0% {
-        -moz-transform: translateY(100%);
+        -moz-transform: translateX(100%);
     }
     100% {
-        -moz-transform: translateY(-100%);
+        -moz-transform: translateX(-100%);
     }
 }
 
 @-webkit-keyframes scroll-up {
     0% {
-        -webkit-transform: translateY(100%);
+        -webkit-transform: translateX(100%);
     }
     100% {
-        -webkit-transform: translateY(-100%);
+        -webkit-transform: translateX(-100%);
     }
 }
 
 @keyframes scroll-up {
     0% {
-        -moz-transform: translateY(100%);
+        -moz-transform: translateX(100%);
         /* Browser bug fix */
-        -webkit-transform: translateY(100%);
+        -webkit-transform: translateX(100%);
         /* Browser bug fix */
-        transform: translateY(100%);
+        transform: translateX(100%);
     }
     100% {
-        -moz-transform: translateY(-100%);
+        -moz-transform: translateX(-100%);
         /* Browser bug fix */
-        -webkit-transform: translateY(-100%);
+        -webkit-transform: translateX(-100%);
         /* Browser bug fix */
-        transform: translateY(-100%);
+        transform: translateX(-100%);
     }
 }
 
 .scroll-down {
     position: absolute;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     margin: 0;
     line-height: 50px;
     text-align: center;
     /* Starting position */
-    -moz-transform: translateY(-100%);
-    -webkit-transform: translateY(-100%);
-    transform: translateY(-100%);
+    -moz-transform: translateX(-100%);
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
     /* Apply animation to this element */
-    -moz-animation: scroll-down 5s linear 1;
-    -webkit-animation: scroll-down 5s linear 1;
-    animation: scroll-down 5s linear 1;
+    -moz-animation: scroll-down 4s linear;
+    -webkit-animation: scroll-down 4s linear;
+    animation: scroll-down 4s linear;
     /* animation-delay: 1s; */
 }
 
@@ -297,36 +260,36 @@ a {
 
 @-moz-keyframes scroll-down {
     0% {
-        -moz-transform: translateY(-100%);
+        -moz-transform: translateX(-100%);
     }
     100% {
-        -moz-transform: translateY(100%);
+        -moz-transform: translateX(100%);
     }
 }
 
 @-webkit-keyframes scroll-down {
     0% {
-        -webkit-transform: translateY(-100%);
+        -webkit-transform: translateX(-100%);
     }
     100% {
-        -webkit-transform: translateY(100%);
+        -webkit-transform: translateX(100%);
     }
 }
 
 @keyframes scroll-down {
     0% {
-        -moz-transform: translateY(-100%);
+        -moz-transform: translateX(-100%);
         /* Browser bug fix */
-        -webkit-transform: translateY(-100%);
+        -webkit-transform: translateX(-100%);
         /* Browser bug fix */
-        transform: translateY(-100%);
+        transform: translateX(-100%);
     }
     100% {
-        -moz-transform: translateY(100%);
+        -moz-transform: translateX(100%);
         /* Browser bug fix */
-        -webkit-transform: translateY(100%);
+        -webkit-transform: translateX(100%);
         /* Browser bug fix */
-        transform: translateY(100%);
+        transform: translateX(100%);
     }
 }
 
