--- a/public/assets/css/mystyle.css
+++ b/public/assets/css/mystyle.css
@@ -65,6 +65,7 @@ button {
     background-color: rgba(255, 255, 255);
     margin: 3vh 10vh;
     padding: 2vh;
+    padding-top: 45px;
     box-shadow: 3px 3px 3px rgb(77, 76, 76);
     text-align: center;
     opacity: 1;
